--- a/css/game.css
+++ b/css/game.css
@@ -1,16 +1,37 @@
+main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: rgba(0, 250, 250, 0.701);
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 20px 50px;
+}
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 700px;
+    padding: 15px;
+    font-size: 1.2em;
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 15px;
     width: 100%;
     max-width: 800px;
-    margin: 100px auto;
+    margin: 0 auto;
 }
 
 .card {
     aspect-ratio: 1/1;
     width: 100%;
-    background-color: #333;
+    background-color: rgb(2, 67, 97);
     border-radius: 8px;
     position: relative;
     transition: all 400ms ease;
@@ -25,6 +46,7 @@
     background-position: center;
     border: 2px solid rgb(0, 46, 0);
     border-radius: 8px;
+    transition: all 2s ease;
 }
 
 .front {
@@ -38,4 +60,33 @@
 
 .reveal-card {
     transform: rotateY(180deg);
+}
+
+.disabled-card {
+    filter: saturate(0);
+    opacity: .5;
+}
+
+.new-game {
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+    margin-top: 8px;
+    background-color: #009578;
+    border: 2px solid #000f00;
+    padding: 3px 8px;
+    border-radius: 8px;
+}
+
+@media screen and (max-width: 426px) {
+    .grid {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 5px;
+    }
+
+    main {
+        align-items: initial;
+        justify-content: initial;
+        padding: 8px 20px 50px;
+    }
 }
