arrumei tamanho do botao de novo jogo

--- a/css/game.css
+++ b/css/game.css
@@ -71,12 +71,15 @@ header {
     color: #000;
     font-weight: bold;
     text-decoration: none;
-    margin-top: 8px;
+    text-align: center;
+    margin: 25px auto;
     background-color: #009578;
     border: 2px solid #000f00;
     padding: 3px 8px;
     border-radius: 8px;
+    width: 50%;
 }
+
 
 @media screen and (max-width: 426px) {
     .grid {
