--- a/css/game.css
+++ b/css/game.css
@@ -2,7 +2,10 @@ main {
     display: flex;
     flex-direction: column;
     width: 100%;
-    background-color: rgba(0, 250, 250, 0.701);
+    background-image: url(../img/bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     min-height: 100vh;
     align-items: center;
     justify-content: center;
@@ -24,14 +27,14 @@ header {
     grid-template-columns: repeat(5, 1fr);
     gap: 15px;
     width: 100%;
-    max-width: 800px;
+    max-width: 490px;
     margin: 0 auto;
 }
 
 .card {
     aspect-ratio: 1/1;
     width: 100%;
-    background-color: rgb(2, 67, 97);
+    /* background-color: rgb(2, 67, 97); */
     border-radius: 8px;
     position: relative;
     transition: all 400ms ease;
@@ -72,7 +75,7 @@ header {
     font-weight: bold;
     text-decoration: none;
     text-align: center;
-    margin: 25px auto;
+    margin: 10px auto;
     background-color: #009578;
     border: 2px solid #000f00;
     padding: 3px 8px;
@@ -92,4 +95,15 @@ header {
         justify-content: initial;
         padding: 8px 20px 50px;
     }
+
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        max-width: 700px;
+        padding: 25px;
+        font-size: 1.2em;
+    }
+
 }
